--- a/index.html
+++ b/index.html
@@ -38,6 +38,24 @@
             <img src="images/image10.png" alt="Image 10" class="centered-image">
           </div>
     </div>
+    <div class="centered-form">
+
+    <div class="form-container centered-image">
+      <form action="/submit" method="post">
+          <h2>Contact Us</h2>
+          <label for="companyName">Company Name</label>
+          <input type="text" id="companyName" name="companyName" required>
+  
+          <label for="contact">Contact</label>
+          <input type="text" id="contact" name="contact" required>
+  
+          <label for="customerName">Customer Name</label>
+          <input type="text" id="customerName" name="customerName" required>
+  
+          <input type="submit" value="Submit">
+      </form>
+  </div>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
