--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
     <div class="form-container centered-image">
       <form action="/submit" method="post">
           <h2>Contact Us</h2>
-          <label for="companyName">Company Name</label>
-          <input type="text" id="companyName" name="companyName" required>
-  
+
+          <label for="Name">Name</label>
+          <input type="text" id="Name" name="Name" required>
+          <label for="Email">Email</label>
+          <input type="text" id="Email" name="Email" required>
+          <label for="Email">Company Name</label>
+          <input type="text" id="CompanyName" name="Email" required>
           <label for="contact">Contact</label>
           <input type="text" id="contact" name="contact" required>
-  
-          <label for="customerName">Customer Name</label>
-          <input type="text" id="customerName" name="customerName" required>
   
           <input type="submit" value="Submit">
       </form>
